@@ -1,8 +1,39 @@
 #!/bin/sh
 #
-# hf6to4 - Setup 6to4 IPv6, for NetBSD (and maybe others)
+# $NetBSD: hf6to4,v 1.4 2005/05/30 22:49:43 hubertf Exp $
 #
-# (c) Copyright 2000, 2003 Hubert Feyrer <hubert@feyrer.de>
+# Copyright (c) 2000-2005 Hubert Feyrer <hubert@feyrer.de>
+# All rights reserved.
+#
+# Redistribution and use in source and binary forms, with or without
+# modification, are permitted provided that the following conditions
+# are met:
+# 1. Redistributions of source code must retain the above copyright
+#    notice, this list of conditions and the following disclaimer.
+# 2. Redistributions in binary form must reproduce the above copyright
+#    notice, this list of conditions and the following disclaimer in the
+#    documentation and/or other materials provided with the distribution.
+# 3. All advertising materials mentioning features or use of this software
+#    must display the following acknowledgement:
+#	This product includes software developed by Hubert Feyrer
+#	for the NetBSD Project.
+# 4. The name of the author may not be used to endorse or promote products
+#    derived from this software without specific prior written permission.
+#
+# THIS SOFTWARE IS PROVIDED BY THE AUTHOR ``AS IS'' AND ANY EXPRESS OR
+# IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED TO, THE IMPLIED WARRANTIES
+# OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE ARE DISCLAIMED.
+# IN NO EVENT SHALL THE AUTHOR BE LIABLE FOR ANY DIRECT, INDIRECT,
+# INCIDENTAL, SPECIAL, EXEMPLARY, OR CONSEQUENTIAL DAMAGES (INCLUDING, BUT
+# NOT LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES; LOSS OF USE,
+# DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND ON ANY
+# THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT
+# (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF
+# THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
+#
+
+#
+# hf6to4 - Setup 6to4 IPv6, for NetBSD (and others)
 #
 
 etcdir="/usr/pkg/etc";
@@ -37,7 +68,7 @@ run()
 ###########################################################################
 usage()
 {
-    echo "Usage: $0 [-n] [-v] {start | stop | rtadvd-start | rtadvd-stop}";
+    echo "Usage: $0 [-n] [-v] {stf-start | stf-stop | rtadvd-start | rtadvd-stop}";
 }
 
 ###########################################################################
@@ -95,12 +126,18 @@ fi
 
 
 #
-# Figure out IP#s etc.
+# Figure out IP#s etc. - ignore RFC 1918 and 3927 IPs
 #
 localadr4=`ifconfig $out_if inet \
            | grep inet \
 	   | sed 's/^.*inet *//' \
 	   | sed 's/ .*$//' \
+	   | grep -v '^192\.168\.' \
+	   | grep -v '^10\.' \
+	   | grep -v '^172\.1[6-9]\.' \
+	   | grep -v '^172\.2[0-9]\.' \
+	   | grep -v '^172\.3[01]\.' \
+	   | grep -v '^169\.254\.' \
 	   | head -1`
 
 l4c=`echo $localadr4 | sed 's,\., ,g'`
@@ -156,7 +193,7 @@ fi
 #
 
 # stop:
-if [ "$1" = "stop" ]
+if [ "$1" = "stf-stop" -o "$1" = "stop" ]
 then
 	run ifconfig stf0 down
 	
@@ -194,7 +231,7 @@ fi
 
 
 # start:
-if [ "$1" = "start" ]
+if [ "$1" = "stf-start" -o "$1" = "start" ]
 then
 	run ifconfig stf0 inet6 $localadr6:$hostbits6 prefixlen $v6_prefixlen alias
 	run route add -inet6 default $remoteadr6 >/dev/null
